New in master
=============

Features
--------

* Support for Discourse as comment system (Issue #3689)

Bugfixes
--------

* Fix baguetteBox.js invoking in the base theme (Issue #3687)

New in v8.2.4
=============

Features
--------

* Add a ``-q``, ``--ignore-query-strings`` option to ignore query strings
  for internal links, allowing their use for cache busting
* Update reST stylesheets (Issue #3657)
* Add a ``--timeout`` parameter to the ``check`` plugin, defaulting to
  30s. (Issue #3643)
* GZIP compression is now deterministic for automatic deploys (Issue #3650)

Bugfixes
--------

* Fix failures to build with a "Document is empty" error in default themes
  (Issue #3679)
* Fix ``PAGE_INDEX`` skipping generation when there exists a conflicting post
* Fix RSS generation of galleries containing WebP images, which caused
  an unhandled exception due to not having a known MIME type (Issue #3671)
* Fix ``auto`` command infinite loop (Issue #3677)
* Fix API URL in CSS and JS minifiers (Issue #3658)
* Fix ``:align: center`` for images in reST (Issue #3657)
* ``GZIP_COMMAND`` parsing on ``win32`` platforms (Issue #3649)

New in v8.2.3
=============

Bugfixes
--------

* Compatibility with Markdown 3.4.0 (Issue #3635)
* Find substring in string instead of using `contains` in utils
* Don't add semicolon in docinfo fields via CSS (caused duplicated
  semicolons)

Nikola now requires Python 3.7 or newer.

New in v8.2.2
=============

* Compatibility with Pygments 2.12.0 (Issue #3617, #3618)

New in v8.2.1
=============

Features
--------

* Add ``emphasize_lines`` directive to code blocks (Issue #3607)
* Gallery index pages support the ``status`` flag (Issue #3598)
* Add ``start_at`` option to youtube directive (Issue #3603)

Bugfixes
--------

* Add data files to dependency file (Issue #3608)
* Compatibility with doit 0.36.0 (Issue #3612)

Note: ``nikola doit_auto`` is not available if using ``doit>=0.36.0``.
You can still use ``nikola auto``.

New in v8.2.0